# SubsetDIC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  wheels.yml
config/: default.yaml
src/cpp/: bindings.cpp  extrapolate.cpp  interpolation.cpp  region.cpp  rgdic.cpp  seeds.cpp  solver.cpp  strain.cpp  types.hpp
src/subsetdic/: __init__.py  bcoef.py  config.py  dic.py  qk.py  sift_seeds.py
tests/: run_cases.py  test_dic.py
